use visibility instead of display so components can calculate size correctly

--- a/client/roast/style.less
+++ b/client/roast/style.less
@@ -18,3 +18,4 @@ html, body {
 }
 
 .hidden { display: none; }
+.invisible { visibility: hidden; }
